fixed text-overflow

--- a/Frontend/PortalCrudAppAngular/src/app/news/news-box/news-box.component.css
+++ b/Frontend/PortalCrudAppAngular/src/app/news/news-box/news-box.component.css
@@ -12,7 +12,6 @@
     justify-content: center;
 }
 
-
 .container_box {
     margin: 1em;
     background: rgb(59, 59, 59);
@@ -76,17 +75,16 @@
     margin: 12px;
 }
 
-.user_image{
+.user_image {
     border-radius: 100%;
 }
 
 .overflowText {
     display: block;
     display: -webkit-box;
-    max-width: 400px;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
+    white-space: nowrap;
+    max-width: 50%;
     overflow: hidden;
     text-overflow: ellipsis;
-    font-size: 1vw;
- }
+    font-size: 1em;
+}
